# cfdns

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  docker_image.yml
conf/: config.toml  domain.txt
src/: config.rs  dns_server.rs  lib.rs  main.rs  ping_server.rs  resource.rs
