[package]
name = "cfdns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = {version = "0.15.0"}
bytes = {version ="1.2.1"}
serde = {version="1.0.145", features = ["derive"]}
anyhow = { version = "1.0.66"}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "sync", "net", "signal", "time"] }
ipnet = { version = "2.5.0"}
once_cell = { version = "1.15.0"}
toml = {version ="0.5.9"}
log = {version ="0.4.17"}
pretty_env_logger = {version ="0.4.0"}
domain = {version = "0.7.1", features = ["bytes"]}
async-channel = {version = "1.7.1"}
[profile.release]
lto = true
opt-level="z"
codegen-units = 1
panic = "abort"
strip = true